--- a/client/src/components/videoFeedback/index.css
+++ b/client/src/components/videoFeedback/index.css
@@ -1,5 +1,18 @@
 #video-stream {
+  max-height: 100%;
+  max-width: 100%;
+  border-radius: 5px;
+}
+#video-wrapper {
+  position: relative;
+  width: auto;
   height: 100%;
-  transform: rotateY(180deg);
-  border-radius: 5px
+}
+#canvas {
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 20;
+  max-width: 100%;
+  height: 100%;
 }
